H42 unreact to a post
